# sqlcli

./: .gitignore  CODE_OF_CONDUCT.md  Doc.md  LICENSE.txt  README.md  pylint.conf  setup.cfg  setup.py  uploadpypi.bat  uploadpypi.sh  uploadpypy.sh
sqlcli/: __init__.py  commandanalyze.py  comparewrapper.py  config.py  datawrapper.py  hbasewrapper.py  hdfswrapper.py  kafkawrapper.py  liteclirc  main.py  newkafkawrapper.py  posixcompare.py  rabbitmqwrapper.py  rediswrapper.py  sqlcli.py  sqlcliexception.py  sqlclijdbcapi.py  sqlclijob.py  sqlclijobmanager.py  sqlclimeta.py  sqlcliodbc.py  sqlcliodbcapi.py  sqlclirc  sqlcliremoteserver.py  sqlclisga.py  sqlclitransactionmanager.py  sqlexecute.py  sqlinternal.py  sqloption.py  sqlparse.py  sshwrapper.py  testwrapper.py
sqlcli/conf/: sqlcli.conf  sqlcli.ini
sqlcli/jlib/: README
sqlcli/mapping/: sqlcli.map
sqlcli/odbc/: .gitignore  CMakeLists.txt  ceoConnection.c  ceoError.c  ceoModule.c  ceoModule.h
sqlcli/profile/: default
sqlcli/util/: PosixCompare.py
test/: connectdb.sql  jobmanager.sql  lob.sql  testdatetime.sql  testenv.ini
testcli/: .gitignore  __init__.py  apiparse.py  commandanalyze.py  hdfswrapper.py  main.py  sqlcli.py  sqlcliapi.py  sqlclijdbc.py  sqlclijobmanager.py  sqlclimeta.py  sqloption.py  sqlparse.py  sshwrapper.py
